# Snake

./: .gitignore  CMakeLists.txt  c  c.cpp  main.cpp
include/: game.h  header.h  snake.h
src/: game.cpp  main.cpp  snake.cpp
